--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "llm_eval",
-  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,11 +11,21 @@
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@neondatabase/serverless": "^0.10.4",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
